--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                         <div class="col-md-4">
                             <div class="card mb-4 box-shadow">
                                 <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="img/3.jpg" data-holder-rendered="true">
